second nav styles, alignment issues

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-around;
-    border-bottom: 1px solid $iconColor;
+    border-bottom: 1px solid $purple;
     padding-bottom: 20px;
 
     @media (min-width: $desktopSmall){
